# AutowareUniverse-Carla

./: .gitignore  LICENSE  README.md  gui.py  start_multiple.py
autoware_adapi_v1_msgs/: CMakeLists.txt
autoware_map/ud-modular-lab/: UDModularLab.fbx  UDModularLab.xodr  lanelet2_map.osm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autoware_adapi_v1_msgs/share/autoware_adapi_v1_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autoware_auto_control_msgs/share/autoware_auto_control_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_geometry_msgs/share/autoware_auto_geometry_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_mapping_msgs/share/autoware_auto_mapping_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_msgs/share/autoware_auto_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_perception_msgs/share/autoware_auto_perception_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_planning_msgs/share/autoware_auto_planning_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_system_msgs/share/autoware_auto_system_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_auto_vehicle_msgs/share/autoware_auto_vehicle_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cv_bridge/share/cv_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/image_geometry/share/image_geometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/infrastructure/lib/infrastructure/: MAP  SSM  update
install/infrastructure/share/infrastructure/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/map/lib/map/: map
install/map/share/map/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/opencv_tests/lib/opencv_tests/: broadcast  rosfacedetect  source
install/opencv_tests/share/opencv_tests/: package.bash  package.sh  package.zsh
install/v2x_msg/share/v2x_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vehicle/lib/vehicle/: default_vehicle  host_vehicle  remote_vehicle  ren_vehicle
install/vehicle/share/vehicle/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_opencv/share/vision_opencv/: local_setup.bash  (+5 more)
log/: latest_build  latest_list
others/: CheatSheet.md  manual_control_data_collection.py  setup.sh  unload.py
src/: Things_To_Do.txt  manual_control.py
src/infrastructure/: package.xml  setup.cfg  setup.py
src/infrastructure/infrastructure/: MAP.py  SSM.py
src/map/: package.xml  setup.cfg  setup.py
src/map/osm/: Openstreetmaptest.osm  lanelet2_map_UDModularLab.osm
src/v2x_msg/: CMakeLists.txt
src/v2x_msg/msg/: EVA.msg  GenericLane.msg  GeographicalPath.msg  ITISSpeedLimitcontent.msg  ITIScodesandtext.msg  IntersectionState.msg  NodeLL.msg  PSM.msg  PVD.msg  ProgressUpdate.txt  RegionOffsets.msg  RequestorDescription.msg  RoadSegment.msg  SpeedandHeadingandThrottleConfidence.msg  TireData.msg  VehicleData.msg  VehicleSafetyExtensions.msg  VehicleSize.msg  WeatherReport.msg  WiperSet.msg
src/vehicle/: package.xml  setup.cfg  setup.py
src/vehicle/config/: host_vehicle.yaml
src/vehicle/launch/: host_vehicle_launch.py
src/vehicle/lidar_data/: 110494.ply  actual.pcd  simulated.pcd
src/vehicle/vehicle/: host_vehicle.py  remote_vehicle.py
v2x_msg/: CMakeLists.txt
v2x_msg/msg/: AccelSets.msg  AdvisorySpeed.msg  AllowedManeuvers.msg  AntennaOffsetSet.msg  Area.msg  BSMCoreData.msg  BrakeSystemStatus.msg  GenericLane.msg  GenericSignage.msg  ITISSpeedLimit.msg  LaneDataAttribute.msg  MovementState.msg  MsgID.msg  NodeAttributeSetXY.msg  OffsetSystem.msg  PDM.msg  PathHistory.msg  Position3D.msg  PropelledInformation.msg  RTCM.msg  RegionPointSet.msg  RequestorPositionVector.msg  RoadSegmentReferenceID.msg  SSM.msg  SignalStatus.msg  TIM.msg  TransitVehicleStatus.msg  TravelerDataFrame.msg  ValidRegion.msg  VehicleClassification.msg  VehicleID.msg  VehicleStatusRequest.msg
(+5557 files in other folders)
